# openarmx_lerobot

openarmx_ws（1）/src/openarmx_description/: CMakeLists.txt  README.md  README_CN.md  change_colors_improved.py
openarmx_ws（1）/src/openarmx_description/config/arm/v10/: inertials.yaml  joint_limits.yaml  kinematics.yaml  kinematics_link.yaml  kinematics_offset.yaml
openarmx_ws（1）/src/openarmx_description/config/hand/openarmx_hand/: inertials.yaml
openarmx_ws（1）/src/openarmx_description/dev/: openarmx_xacro_v10_variables.md  openarmx_xacro_v10_variables_CN.md
openarmx_ws（1）/src/openarmx_description/launch/: display_openarmx.launch.py
openarmx_ws（1）/src/openarmx_description/meshes/arm/v10/visual/: link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
openarmx_ws（1）/src/openarmx_description/meshes/body/v10/visual/: body_link0.STL  body_link0.dae
openarmx_ws（1）/src/openarmx_description/meshes/ee/openarmx_hand/visual/: hand.dae
openarmx_ws（1）/src/openarmx_description/rviz/: arm_only.rviz  bimanual.rviz
openarmx_ws（1）/src/openarmx_description/urdf/arm/: openarmx_arm.xacro  openarmx_macro.xacro
openarmx_ws（1）/src/openarmx_description/urdf/body/: openarmx_body.xacro  openarmx_body_macro.xacro
openarmx_ws（1）/src/openarmx_description/urdf/ee/: openarmx_hand.xacro  openarmx_hand_arguments.xacro  openarmx_hand_macro.xacro
openarmx_ws（1）/src/openarmx_description/urdf/robot/: openarmx_robot.xacro  v10.urdf.xacro
openarmx_ws（1）/src/openarmx_description/urdf/ros2_control/: openarmx.bimanual.ros2_control.xacro  openarmx.ros2_control.xacro
openarmx_ws（1）/src/openarmx_motor_manager/: GUI_MultiRobot.py  README.md  README_CN.md  __init__.py  requirements.txt
openarmx_ws（1）/src/openarmx_motor_manager/config/: __init__.py  config.yaml  config_manager.py  script_finder.py
openarmx_ws（1）/src/openarmx_motor_manager/scripts/: check_motor_status.py  control_arms_grippers_action.py  control_motor_gohome.py  dis_all_can.py  dis_all_motors.py  en_all_can.py  en_all_motors.py  set_motor_zero.py  test_motor_all_random.py  test_motor_one_CSP.py  test_motor_one_CSP_hold.py  test_motor_one_MIT.py  test_motor_one_by_one.py  test_motor_one_hold_MIT.py
openarmx_ws（1）/src/openarmx_motor_manager/ui/: ConfigDialog.py  MainUI_MultiRobot.py  RobotPage.py  RobotWorker.py  SettingsDialog.py  SingleMotorTestDialog.py  __init__.py  translations.yaml
openarmx_ws（1）/src/openarmx_motor_manager/utils/: __init__.py  can_detector.py
openarmx_ws（1）/src/openarmx_ros2/: README.md  README_CN.md  openarmx-can_1.0.0_amd64.deb  openarmx-can_1.0.0_arm64.deb  openarmx.repos  openarmx_minimal.repos  openarmx_vla.repos  openarmx_vr.repos
openarmx_ws（1）/src/openarmx_ros2/openarmx/: CMakeLists.txt
openarmx_ws（1）/src/openarmx_ros2/openarmx_bimanual_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  README_CN.md  run_bimanual_moveit_sim.sh  run_bimanual_moveit_with_can2.0.sh
openarmx_ws（1）/src/openarmx_ros2/openarmx_bimanual_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  openarmx_bimanual.srdf  openarmx_bimanual.urdf.xacro  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
openarmx_ws（1）/src/openarmx_ros2/openarmx_bimanual_moveit_config/launch/: demo.launch.py  demo_sim.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
openarmx_ws（1）/src/openarmx_ros2/openarmx_bringup/: CMakeLists.txt  GRIPPER_CONTROL_GUIDE.md  GRIPPER_CONTROL_GUIDE_CN.md  README.md  README_CN.md
openarmx_ws（1）/src/openarmx_ros2/openarmx_bringup/config/v10_controllers/: openarmx_v10_bimanual_controllers.yaml  openarmx_v10_bimanual_controllers_namespaced.yaml  openarmx_v10_controllers.yaml
openarmx_ws（1）/src/openarmx_ros2/openarmx_bringup/launch/: openarmx.bimanual.launch.py
openarmx_ws（1）/src/openarmx_ros2/openarmx_bringup/rviz/: bimanual.rviz
openarmx_ws（1）/src/openarmx_ros2/openarmx_hardware/: CMakeLists.txt  LICENSE  README.md  README_CN.md
openarmx_ws（1）/src/openarmx_ros2/openarmx_hardware/include/openarmx_hardware/: v10_simple_hardware.hpp  visibility_control.h
openarmx_ws（1）/src/openarmx_ros2/openarmx_hardware/src/: v10_simple_hardware.cpp
openarmx_ws（1）/src/openarmx_teleop_bimanual/: CMakeLists.txt  README.md  README_CN.md
openarmx_ws（1）/src/openarmx_teleop_bimanual/launch/: teleop_bimanual.launch.py  teleop_bimanual_with_gravitycomp.launch.py
openarmx_ws（1）/src/openarmx_teleop_bimanual/py/: teleop_unilateral_bimanual.py  teleop_unilateral_single.py
openarmx_ws（1）/src/openarmx_teleop_bimanual/src/: dynamics.cpp  teleop_bimanual_node.cpp  teleop_bimanual_with_gravitycomp_single.cpp
openarmx_ws（1）/src/openarmx_tools/: README.md  README_CN.md
openarmx_ws（1）/src/openarmx_tools/openarmx_gripper_panel/: CMakeLists.txt  README.md  README_CN.md
openarmx_ws（1）/src/openarmx_tools/openarmx_gripper_panel/include/openarmx_gripper_panel/: gripper_panel.hpp
openarmx_ws（1）/src/openarmx_tools/openarmx_gripper_panel/src/: gripper_panel.cpp
openarmx_ws（1）/src/openarmx_tools/openarmx_joint_slider_panel/: CMakeLists.txt  README.md  README_CN.md
openarmx_ws（1）/src/openarmx_tools/openarmx_joint_slider_panel/include/openarmx_joint_slider_panel/: joint_slider_panel.hpp
openarmx_ws（1）/src/openarmx_tools/openarmx_joint_slider_panel/resource/: openarmx_joint_slider_panel
openarmx_ws（1）/src/openarmx_tools/openarmx_joint_slider_panel/src/: joint_slider_panel.cpp
openarmx_ws（1）/src/openarmx_tools/openarmx_kp_kd_panel/: CMakeLists.txt  README.md  README_CN.md
openarmx_ws（1）/src/openarmx_tools/openarmx_kp_kd_panel/include/openarmx_kp_kd_panel/: kp_kd_panel.hpp
openarmx_ws（1）/src/openarmx_tools/openarmx_kp_kd_panel/src/: kp_kd_panel.cpp
src/lerobot/robots/: utils.py
src/lerobot/scripts/: lerobot_calibrate.py  lerobot_find_joint_limits.py  lerobot_record.py  lerobot_replay.py  lerobot_rollout.py  lerobot_setup_motors.py  lerobot_teleoperate.py
src/lerobot/utils/: utils.py
(+32 files in other folders)
